# game

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: game-sdl-ci.yml  game-strict-ci.yml
cmake/: vix_gameConfig.cmake.in
examples/: CMakeLists.txt  asset_loading.cpp  async_asset_loading.cpp  basic_loop.cpp  hello_game.cpp  jobs_demo.cpp  null_renderer.cpp  null_window.cpp  opengl_renderer_demo.cpp  render2d_demo.cpp  scene_demo.cpp  scene_serialization.cpp  sprite_demo.cpp
include/vix/game/: App.hpp  AppConfig.hpp  Asset.hpp  AssetCache.hpp  AssetId.hpp  AssetManager.hpp  AssetPath.hpp  AssetType.hpp  AsyncAssetLoader.hpp  AudioRuntime.hpp  Camera2D.hpp  Color.hpp  Component.hpp  DrawSpriteCommand.hpp  EditorContext.hpp  EditorRuntime.hpp  Entity.hpp  EntityId.hpp  Event.hpp  EventBus.hpp  EventType.hpp  Frame.hpp  GameAssetPipeline.hpp  GameClock.hpp  GameContext.hpp  GameError.hpp  GameExportAsset.hpp  GameExportConfig.hpp  GameExportManifest.hpp  GameExporter.hpp  GameLoop.hpp  GamePackage.hpp  GameResult.hpp  GameRuntime.hpp  InputAction.hpp  InputButton.hpp  InputKey.hpp  InputMap.hpp  InputState.hpp  InputSystem.hpp  (+35 more)
include/vix/game/backends/opengl/: OpenGLRenderer.hpp
include/vix/game/backends/sdl/: SDLInputMap.hpp  SDLOpenGLRenderer.hpp  SDLRenderer.hpp  SDLWindow.hpp
src/: App.cpp  AppConfig.cpp  Asset.cpp  AssetCache.cpp  AssetManager.cpp  AssetPath.cpp  AsyncAssetLoader.cpp  AudioRuntime.cpp  Camera2D.cpp  Color.cpp  EditorContext.cpp  EditorRuntime.cpp  Entity.cpp  Event.cpp  EventBus.cpp  Frame.cpp  GameAssetPipeline.cpp  GameClock.cpp  GameContext.cpp  GameError.cpp  GameExportConfig.cpp  GameExportManifest.cpp  GameExporter.cpp  GameLoop.cpp  GamePackage.cpp  GameRuntime.cpp  InputAction.cpp  InputMap.cpp  InputState.cpp  InputSystem.cpp  JobHandle.cpp  JobSystem.cpp  NullRenderer.cpp  NullWindow.cpp  PhysicsRuntime.cpp  Rect.cpp  Registry.cpp  Render2DSystem.cpp  RenderCommand.cpp  Renderer.cpp  (+17 more)
src/backends/opengl/: OpenGLRenderer.cpp
src/backends/sdl/: SDLInputMap.cpp  SDLOpenGLRenderer.cpp  SDLRenderer.cpp  SDLWindow.cpp
tests/: AppTests.cpp  AssetManagerTests.cpp  CMakeLists.txt  EventBusTests.cpp  GameLoopTests.cpp  JobSystemTests.cpp  RegistryTests.cpp  SceneManagerTests.cpp  TimeStepTests.cpp  game_exporter_tests.cpp  headless_runtime_tests.cpp  runtime_v4_architecture_tests.cpp
